--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,37 +5,25 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      db:
-        condition: service_healthy
-    environment:
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_URL=${DB_URL}
-      - DB_PASSWORD=${DB_PASS}
-      - DB_NAME=${DB_NAME}
-      - DB_DRIVER=mysql
+      - db
+    env_file:
+      - .env
     networks:
       - backend
 
   db:
-    image: mysql:8
+    image: postgres:alpine
     restart: always
     environment:
-      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
-      - MYSQL_DATABASE=${DB_NAME}
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASS}
+      - POSTGRES_DB=${DB_NAME}
     volumes:
-      - mysql_data:/var/lib/mysql
+      - postgres:/var/lib/postgres
     networks:
       - backend
     ports:
-      - "3306:3306"
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      interval: 5s
-      timeout: 10s
-      retries: 5
+      - "5432:5432"
 
 volumes:
   mysql_data:
